--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,17 +14,17 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}     
       - name: Build Docker Image
-        run: docker build -t mandavasai/nodejs  .
+        run: docker build -t bhushanmandava02/nodejsapp .
       - name: Publish Image to docker hub
-        run: docker push mandavasai/nodejs:latest 
+        run: docker push bhushanmandava02/nodejsapp:latest 
  
   deploy:
     needs: build
     runs-on: self-hosted 
     steps:
       - name: Pull image from docker hub
-        run: docker pull mandavasai/nodejs:latest 
+        run: docker pull bhushanmandava02/nodejsapp:latest 
       - name: Delete old container
         run: docker rm -f nodejs-app-container  
       - name: Run Docker Container
-        run: docker run -d -p 4000:4000 --name nodejs-app-container -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' mandavasai/nodejs
+        run: docker run -d -p 4000:4000 --name nodejs-app-container -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' bhushanmandava02/nodejsapp
