--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,8 +23,8 @@ jobs:
     runs-on: self-hosted 
     steps:
       - name: Pull image from docker hub
-        run: docker pull bhushanmandava02/nodejsapp:latest 
+        run: sudo docker pull bhushanmandava02/nodejsapp:latest 
       - name: Delete old container
-        run: docker rm -f nodejs-app-container  
+        run: sudo docker rm -f nodejs-app-container  
       - name: Run Docker Container
-        run: docker run -d -p 4000:4000 --name nodejs-app-container -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' bhushanmandava02/nodejsapp
+        run: sudo docker run -d -p 4000:4000 --name nodejs-app-container -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' bhushanmandava02/nodejsapp
